--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <header>
-    <nav class="navbar navbar-light navbar-expand-md justify-content-center nav-shadow">
+    <nav class="navbar navbar-light navbar-expand-md justify-content-center shadow-sm">
         <a href="#" class="navbar-brand mr-0">
             <i class="fa fa-map-marker fa-nav"><span class="nav-brand-text">ClearMove</span></i>
         </a>
-        <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
+        <button class="navbar-toggler ml-1" (click)="showMenu()" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
+        <div [ngClass]="{show: showClass}" class="navbar-collapse collapse justify-content-between align-items-center w-100 nav-margin"  id="collapsingNavbar2">
             <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item">
                     <a class="nav-link disabled text-uppercase" href="#">Home</a>
@@ -52,44 +52,50 @@
 <div class="mx-lg-5 mx-1 mx-sm-1 mx-md-4 my-sm-1 my-lg-3 my-md-3">
     <div class="container mt-4 border-bottom">
 
-        <div class="row">
-            <h5>Employees(24)</h5>
+        <div class="row mt-5">
+            <h5 class="ml-4">Employees(24)</h5>
         </div>
 
-        <div class="row mt-2">
-            <div class="col-md-6 col-sm-12 col-xs-12">
+        <div class="row mt-2 pl-0">
+            <div class="col-md-7 col-sm-12 col-xs-12">
                 <div class="d-flex justify-content-start">
-                    <div class="col-4 p-2 bd-highlight">
-                        Policy:
-                        <button type="button" class="btn btn-secondary btn-sm btn-all">
-                            <i class="fa fa-circle fa-button-circle"></i> All
-                        </button>
-                        <i class="fa fa-angle-down ml-2"></i>
+                    <div class="col-md-4 col-sm-4 col-xs-12 p-2 bd-highlight text">
+                      <div>
+                          Policy:
+                          <button type="button" class="btn btn-secondary btn-sm btn-all px-3 py-2">
+                              <i class="fa fa-circle fa-button-circle"></i> All
+                          </button>
+                          <i class="fa fa-angle-down ml-2"></i>
+                      </div>
                     </div>
-                    <div class="col-4 p-2 bd-highlight">
-                        Status:
-                        <button type="button" class="btn btn-secondary btn-sm btn-all">
-                            <i class="fa fa-circle fa-button-circle"></i> All
-                        </button>
-                        <i class="fa fa-angle-down ml-2"></i>
+                    <div class="col-md-4 col-sm-4 col-xs-12 p-2 bd-highlight text">
+                       <div>
+                           Status:
+                           <button type="button" class="btn btn-secondary btn-sm btn-all px-3 py-2">
+                               <i class="fa fa-circle fa-button-circle"></i> All
+                           </button>
+                           <i class="fa fa-angle-down ml-2"></i>
+                       </div>
                     </div>
-                    <div class="col-4 p-2 bd-highlight">
-                        Progress:
-                        <button type="button" class="btn btn-secondary btn-sm btn-all">
-                            <i class="fa fa-circle fa-button-circle"></i> All
-                        </button>
-                        <i class="fa fa-angle-down ml-2"></i>
+                    <div class="col-md-4 col-sm-4 col-xs-12 p-2 bd-highlight text">
+                       <div>
+                           Progress:
+                           <button type="button" class="btn btn-secondary btn-sm btn-all px-3 py-2">
+                               <i class="fa fa-circle fa-button-circle"></i> All
+                           </button>
+                           <i class="fa fa-angle-down ml-2"></i>
+                       </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="col-md-5 col-sm-12 col-xs-12">
                 <div class="d-flex justify-content-md-end justify-content-sm-start justify-content-xs-start">
                     <div class="p-2 bd-highlight">
-                        <i class="fa fa-search align-middle"></i>
+                        <i class="fa fa-search fa-search-custom"></i>
                     </div>
 
                     <div class="p-2 bd-highlight">
-                        <button type="button" class="px-4 btn btn-primary btn-add">
+                        <button type="button" class="px-4 btn btn-primary btn-add py-2">
                             <i class="fa fa-plus"></i>
                             Add Employee
                         </button>
@@ -100,57 +106,74 @@
 
         <div class="row mt-4">
             <div class="col-12">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th class="th-sm color-blue">NAME
-                            <i class="fa fa-angle-down"></i>
-                        </th>
-                        <th class="th-sm">POLICY
-                            <i class="fa fa-angle-down"></i>
-                        </th>
-                        <th class="th-sm">POLICY STATUS
-                            <i class="fa fa-angle-down"></i></th>
-                        <th class="th-sm">LAST
-                            <i class="fa fa-angle-down"></i>
-                        </th>
-                        <th class="th-sm">HANDLE
-                            <i class="fa fa-angle-down"></i>
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr *ngFor="let user of users">
-                        <th><label><input type="radio" name="optradio"></label></th>
-                        <td>
-                            <img class="img-responsive profile-pic" src="{{user.avatar}}">
-                            {{user.first_name}} {{user.last_name}}
-                        </td>
-                        <th scope="row">{{user.id}}</th>
-                        <td>{{user.first_name}}</td>
-                        <td>{{user.last_name}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="shadow table-borderless">
+                        <tr>
+                            <th class="th-sm"></th>
+                            <th class="th-sm text-table-active">Name
+                                <i class="fa fa-angle-down"></i>
+                            </th>
+                            <th class="th-sm text-table">Policy
+                                <i class="fa fa-angle-down"></i>
+                            </th>
+                            <th class="th-sm text-table">Policy Status
+                                <i class="fa fa-angle-down"></i></th>
+                            <th class="th-sm text-table">Status
+                                <i class="fa fa-angle-down"></i>
+                            </th>
+                            <th class="th-sm text-table">Progress
+                                <i class="fa fa-angle-down"></i>
+                            </th>
+                            <th class="th-sm"></th>
+                            <th class="th-sm"></th>
+                            <th class="th-sm"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let user of users">
+                            <td><label><input class="radio-table" type="radio" name="optradio"></label></td>
+                            <td class="pl-0">
+                                <img class="img-responsive profile-pic" src="{{user.avatar}}">
+                                {{user.first_name}} {{user.last_name}}
+                            </td>
+                            <td>
+                                {{user.first_name}} {{user.last_name}}
+                            </td>
+                            <td scope="row">{{user.id}}</td>
+                            <td>{{user.first_name}}</td>
+                            <td>{{user.last_name}}</td>
+                            <td class="width-td">
+                                <button href="#" class="btn btn-primary btn-operation px-3"><i class="fa fa-pencil fa-operation"></i></button>
+                            </td>
+                            <td class="width-td">
+                                <button href="#" class="btn btn-primary btn-operation px-3"><i class="fa fa-trash fa-operation"></i></button>
+                            </td>
+                            <td class="width-td">
+                                <button href="#" class="btn btn-primary btn-operation px-3"><i class="fa fa-ellipsis-h fa-operation"></i></button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="col-12" >
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-end">
                         <li class="page-item" [ngClass]="{disabled: currentPage===1}">
-                            <a (click)="previous()" class="page-link" href="#" tabindex="-1">Previous</a>
+                            <a (click)="previous()" class="page-link page-text" href="#" tabindex="-1">Previous</a>
                         </li>
                         <li [ngClass]="{active: currentPage===page+1}" class="page-item"
                             *ngFor="let page of totalPages"><a
                                 (click)="goToPage(page+1)"
-                                class="page-link"
+                                class="page-link page-text"
                                 href="#">{{page+1}}</a></li>
                         <li class="page-item" [ngClass]="{disabled: currentPage===(totalPages).length}">
-                            <a (click)="next()" class="page-link" href="#">Next</a>
+                            <a (click)="next()" class="page-link page-text" href="#">Next</a>
                         </li>
                     </ul>
                 </nav>
             </div>
-
         </div>
 
     </div>
