--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -15,16 +15,28 @@
 .btn-all
   border-radius: 19px
   color: black
-  background-color: #f8f9fa
-  border-color: #f8f9fa
+  background-color: #f0f4f6
+  border-color: #f0f4f6
 
 .fa-button-circle
-  color: gray
+  color: #a6bbc4
 
 .btn-add
   border-radius: 19px
   background-color: #00bed8
   border-color: #00bed8
+  font-size: .8em
+
+.btn-add:not(:disabled):not(.disabled):active,
+.btn-add:not(:disabled):not(.disabled).active
+  background-color: #00bed8
+  border-color: #00bed8
+
+.btn-add:not(:disabled):not(.disabled):active:focus,
+.btn-add:not(:disabled):not(.disabled).active:focus
+  box-shadow: 0 0 0 0.2rem rgb(0, 190, 216)
+
+
 
 .margin-top-3
   margin-top: 3%
@@ -51,7 +63,7 @@
 .nav-brand-text
   color: #00bed8
   margin-left: 7px
-  font-family: serif
+  font-family: cursive
   font-weight: 600
   font-size: 19px
 
@@ -65,12 +77,67 @@
   border-radius: 100%
   margin-right: 2%
 
-.color-blue
+.text-table-active
   color: #00bed8
+  font-size: 1em !important
+  font-weight: 800
 
 .text-active-nav
   color: #00bed8 !important
   font-weight: 900
 
-.nav-shadow
-  box-shadow: 0 1px 1px -2px rgba(0, 0, 0, 0.05), 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12)
+.text-table
+  color: gray
+  font-size: .9em
+  font-weight: 600
+  text-transform: uppercase
+
+.text
+  color: gray
+  font-size: .9em
+  font-weight: 400
+
+.page-item.active .page-link
+  z-index: 1
+  color: #fff
+  background-color: #00bed8
+  border-color: #00bed8
+
+.page-text
+  color:  #00bed8
+
+.nav-margin
+  margin-bottom: -15px
+
+.btn-operation
+  background-color: #e0fafb
+  border-color: #e0fafb
+  border-radius: 17px
+  font-size: .8em
+
+.btn-operation:not(:disabled):not(.disabled):active,
+.btn-operation:not(:disabled):not(.disabled).active
+  background-color: #e0fafb
+  border-color: #e0fafb
+
+.fa-operation
+  color:  #00bed8
+
+.radio-table
+  height: 18px
+  width: 18px
+
+.header-border
+  border: 1px solid #dee2e6
+
+.width-td
+  width: 2px
+
+.nav-item a
+  font-weight: 700 !important
+
+.fa-search-custom
+  color: #a3b4bb
+  font-weight: 100
+  font-size: 1em
+  vertical-align: -webkit-baseline-middle
