--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -141,3 +141,6 @@
   font-weight: 100
   font-size: 1em
   vertical-align: -webkit-baseline-middle
+
+.active-row
+  background-color: rgba(0,0,0,0.1)!important
