--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,6 +2,8 @@
 @import "~bootstrap/dist/css/bootstrap.css"
 @import "~font-awesome/css/font-awesome.css"
 
+$base-color: #00bed8
+
 #ex4 .p1[data-count]:after
   position: absolute
   right: 20%
@@ -27,20 +29,18 @@
 
 .btn-add
   border-radius: 19px
-  background-color: #00bed8
-  border-color: #00bed8
+  background-color: $base-color
+  border-color: $base-color
   font-size: .8em
 
 .btn-add:not(:disabled):not(.disabled):active,
 .btn-add:not(:disabled):not(.disabled).active
-  background-color: #00bed8
-  border-color: #00bed8
+  background-color: $base-color
+  border-color: $base-color
 
 .btn-add:not(:disabled):not(.disabled):active:focus,
 .btn-add:not(:disabled):not(.disabled).active:focus
   box-shadow: 0 0 0 0.2rem rgb(0, 190, 216)
-
-
 
 .margin-top-3
   margin-top: 3%
@@ -60,20 +60,20 @@
   transform: translateX(-50%)
 
 .fa-nav
-  color: #00bed8
+  color: $base-color
   font-size: 22px
   font-weight: 900
 
 .nav-brand-text
-  color: #00bed8
+  color: $base-color
   margin-left: 7px
   font-family: cursive
   font-weight: 600
   font-size: 19px
 
 .active-nav
-  border-bottom: 3px solid #00bed8
-  color: #00bed8
+  border-bottom: 3px solid $base-color
+  color: $base-color
   font-weight: 900
 
 .profile-pic
@@ -82,12 +82,12 @@
   margin-right: 2%
 
 .text-table-active
-  color: #00bed8
+  color: $base-color
   font-size: 1em !important
   font-weight: 800
 
 .text-active-nav
-  color: #00bed8 !important
+  color: $base-color !important
   font-weight: 900
 
 .text-table
@@ -104,11 +104,11 @@
 .page-item.active .page-link
   z-index: 1
   color: #fff
-  background-color: #00bed8
-  border-color: #00bed8
+  background-color: $base-color
+  border-color: $base-color
 
 .page-text
-  color:  #00bed8
+  color: $base-color
 
 .nav-margin
   margin-bottom: -15px
@@ -125,7 +125,7 @@
   border-color: #e0fafb
 
 .fa-operation
-  color:  #00bed8
+  color: $base-color
 
 .radio-table
   height: 18px
@@ -147,4 +147,17 @@
   vertical-align: -webkit-baseline-middle
 
 .active-row
-  background-color: rgba(0,0,0,0.1)!important
+  background-color: rgba(0, 0, 0, 0.1) !important
+
+.page-link:focus
+  z-index: 2
+  outline: 0
+  box-shadow: none
+
+::selection
+  background-color: $base-color
+  color: white
+
+::-moz-selection
+  background: $base-color
+  color: white
