separate navbar css

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,33 +12,33 @@
              id="collapsingNavbar2">
             <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item">
-                    <a class="nav-link disabled text-uppercase" href="#">Home</a>
+                    <a class="nav-link disabled" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-uppercase active-nav text-active-nav" href="#">Human Resources</a>
+                    <a class="nav-link disabled active-nav text-active-nav" href="#">Human Resources</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-uppercase" href="#">Finance</a>
+                    <a class="nav-link disabled" href="#">Finance</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-uppercase" href="#">Reports</a>
+                    <a class="nav-link disabled" href="#">Reports</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-uppercase" href="#">Settings</a>
+                    <a class="nav-link disabled" href="#">Settings</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <span>
-                            <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
-                                 alt="user" class="profile-pic">
+                            <img src="../../../assets/img/profile.png"
+                                 alt="profile-pic" class="profile-pic">
                         </span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                     <span id="ex4">
+                     <span id="icon-notification">
                       <span class="p1 fa-stack  has-badge" data-count="">
                         <i class="p3 fa fa-bell-o fa-stack-1x xfa-inverse fa-nav"></i>
                       </span>
