add filter css 2

--- a/src/app/shared/filters/filters.component.sass
+++ b/src/app/shared/filters/filters.component.sass
@@ -34,3 +34,8 @@
 
 .btn-add:focus, .btn-add.focus
   box-shadow: none
+
+.filter-text
+  color: $gray-color
+  font-size: $base-font
+  font-weight: 400
