--- a/src/app/shared/filters/filters.component.html
+++ b/src/app/shared/filters/filters.component.html
@@ -5,7 +5,7 @@
 <div class="row mt-2 pl-0">
   <div class="col-md-7 col-sm-12 col-xs-12">
     <div class="d-flex justify-content-start">
-      <div class="col-md-4 col-sm-4 col-xs-12 text p-2">
+      <div class="col-md-4 col-sm-4 col-xs-12 filter-text p-2">
         Policy:
         <div class="d-inline-flex">
           <button type="button" class="btn btn-secondary btn-sm btn-all px-3 py-2">
@@ -14,7 +14,7 @@
           <i class="fa fa-angle-down ml-2 my-auto"></i>
         </div>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-12 text p-2">
+      <div class="col-md-4 col-sm-4 col-xs-12 filter-text p-2">
         Status:
         <div class="d-inline-flex">
 
@@ -24,7 +24,7 @@
           <i class="fa fa-angle-down ml-2 my-auto"></i>
         </div>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-12 p-2 text">
+      <div class="col-md-4 col-sm-4 col-xs-12 p-2 filter-text">
         Progress:
         <div class="d-inline-flex">
           <button type="button" class="btn btn-secondary btn-sm btn-all px-3 py-2">
