--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
 
 <div class="mx-lg-5 mx-1 mx-sm-1 mx-md-4 my-sm-1 my-lg-3 my-md-3">
-    <div class="container mt-4 border-bottom">
+    <div class="container mt-4">
 
         <app-filters></app-filters>
 
@@ -16,15 +15,15 @@
                             <th class="th-sm text-table-active">Name
                                 <i class="fa fa-angle-down"></i>
                             </th>
-                            <th class="th-sm text-table">Policy
+                            <th class="th-sm">Policy
                                 <i class="fa fa-angle-down"></i>
                             </th>
-                            <th class="th-sm text-table">Policy Status
+                            <th class="th-sm">Policy Status
                                 <i class="fa fa-angle-down"></i></th>
-                            <th class="th-sm text-table">Status
+                            <th class="th-sm">Status
                                 <i class="fa fa-angle-down"></i>
                             </th>
-                            <th class="th-sm text-table">Progress
+                            <th class="th-sm">Progress
                                 <i class="fa fa-angle-down"></i>
                             </th>
                             <th class="th-sm"></th>
