--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,3 +1,6 @@
 $base-color: #00bed8
 $base-active-color: #659ba2
+$gray-color: gray
+$base-font: .9em
+$operation-btn-color: #e0fafb
 $font-weight-900: 900
