change background color

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -40,7 +40,8 @@ th
   width: 2px
 
 .active-row
-  background-color: rgba(0, 0, 0, 0.1) !important
+  background-color: rgba(214, 214, 214, 0.1) !important
+  //border-left: red solid 3px
 
 .isOdd
   color: red
